# remaker

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  remaker
examples/: foo.c  makefile  math.c  remake-lock.json  remaker
examples/c_project/: foo.c  makefile  math.h  remaker
src/: main.rs  parse.rs  remake.pest  types.rs
